# DawnEngine

./: .gitignore  CMakeLists.txt  README.MD  TODO.MD  renderDoc.cap  test.spv  vc140.idb  vcpkg-configuration.json  vcpkg.json
include/: constants.hpp  dawnEngine.hpp  engine.hpp  enums.hpp  gpuObjectManager.hpp  renderPipelineHelper.hpp  structs.hpp  utilities.hpp
models/: cornellbox.binold  cornellbox.blend  cornellbox.blend1  cornellbox.gltf  cornellboxold.gltf  cube.gltf  cube.hpp  triangle.hpp  untitled1.gltf
models/cornellBox/: cornellbox.blend  cornellbox.gltf
shaders/: _definitions.hlsli  baseColorAccumulator_c.hlsl  baseColorAccumulator_c.wgsl  c_baseColorAccumulator.hlsl  canvas.hlsli  canvas_v.hlsl  clear_c.wgsl  compile.ps1  definitions.hlsli  f_geometryShader.spv  f_outputShader.spv  f_shader.spv  f_shadowShader.spv  f_unlitShader.spv  fourChannelAccumulator_c.wgsl  geometryShader.hlsl  helpers.hlsli  initialRender.hlsli  initialRenderOne_f.wgsl  initialRenderTwo_f.wgsl  initialRender_f.hlsl  initialRender_f.wgsl  initialRender_v.hlsl  initialRender_v.wgsl  initialRender_vf.wgsl  lighting_c.wgsl  outputShader.hlsl  shader.hlsl  shadowMap.hlsli  shadowMap_f.hlsl  shadowMap_v.hlsl  shadowShader.hlsl  shadowShader.hlsl.bak  shadowShader_f.hlsl  shadowShader_v.hlsl  shadowToCamera_c.wgsl  toSurface_f.hlsl  ultimate_c.hlsl  ultimate_c.wgsl  unlitShader.hlsl  (+5 more)
source/: _PIPELINELAYOUT.MD  constants.hpp  dawnEngine.cpp  device.hpp  engine.cpp  engine.hpp  enums.hpp  gltf.cpp  gltf.hpp  gpuObjectManager.cpp  gpuObjectManager.hpp  initialRender.cpp  initialRender.hpp  main.cpp  print.hpp  renderPipelineHelper.cpp  renderPipelineHelper.hpp  samplers.hpp  sdl3webgpu.cpp  sdl3webgpu.hpp  structs.hpp  surfaceConfiguration.hpp  textureSamplerManager.cpp  textureSamplerManager.hpp  utilities.cpp  utilities.hpp  vkFormat.hpp
source/device/: buffer.cpp  buffer.hpp  callback.hpp  device.cpp  device.hpp  renderResources.cpp  renderResources.hpp  resources.cpp  resources.hpp  structs.hpp  texture.cpp  texture.hpp
source/engine/: engine.cpp  engine.hpp
source/gltf/: convert.hpp  gltf.cpp  gltf.hpp
source/host/: createBuffer.hpp  host.cpp  host.hpp  structs.hpp
source/render/: accumulator.cpp  accumulator.hpp  clear.cpp  clear.hpp  initial.cpp  initial.hpp  initialRender.cpp  lighting.cpp  lighting.hpp  shadow.cpp  shadow.hpp  shadowMap.cpp  shadowMap.hpp  shadowToCamera.cpp  shadowToCamera.hpp  toSurface.cpp  toSurface.hpp  ultimate.cpp  ultimate.hpp  vertexBufferLayout.hpp
source/render/accumulator/: base.cpp  base.hpp  fourChannel.hpp
source/structs/: device.hpp  host.hpp  structs.hpp
source/texture/: texture.cpp  texture.hpp  vkFormat.hpp
source/wgpuContext/: wgpuContext.cpp  wgpuContext.hpp
